# crypto_byAI

./: .gitignore  BTL MMHCS.docx  DEVELOPMENT.md  PROJECT_SETUP_COMPLETE.md  README.md  REDUNDANCY_ANALYSIS.md  main.py  pyproject.toml  requirements.txt  ~$L MMHCS.docx
configs/: default.yaml
data/metadata/: dataset.csv  ransomware_family_dataset.csv
reports/: .gitkeep
reports/crypto_family/: classification_report.txt  metrics.json  top_features.json
reports/ransomware_family/: classification_report.txt  metrics.json  top_features.json
src/: __init__.py  cli.py  config.py
src/api/: __init__.py  app.py
src/crypto/: __init__.py  encrypt_3des.py  encrypt_aes.py  encrypt_arc2.py  encrypt_blowfish.py  encrypt_cast.py  encrypt_chacha20.py  encrypt_des.py  encrypt_hybrid.py  encrypt_rc4.py  encrypt_salsa20.py  encrypt_xor.py  footer.py
src/dataset/: __init__.py  build_metadata.py  generate_compressed_samples.py  generate_encrypted_samples.py  split_original_files.py
src/features/: __init__.py  byte_stats.py  entropy.py  extract_features.py  file_structure.py
src/models/: __init__.py  evaluate.py  predict.py  train.py
tests/: __init__.py  test_cli_predict_output.py  test_crypto_generation.py  test_entropy.py  test_feature_extraction.py  test_prediction_schema.py
