[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ransomware-crypto-ai"
version = "0.1.0"
description = "AI-based Prediction of Ransomware Encryption Algorithm Groups"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Crypto AI Team", email = "team@example.com"}
]
keywords = ["ransomware", "encryption", "machine-learning", "cryptanalysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "click>=8.0.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "joblib>=1.1.0",
    "threadpoolctl>=3.1.0",
    "pyyaml>=5.4.0",
    "tqdm>=4.62.0",
    "cryptography>=3.4.0",
    "pycryptodome>=3.15.0",
    "fastapi>=0.75.0",
    "uvicorn>=0.17.0",
    "python-multipart>=0.0.5",
    "pyarrow>=7.0.0",
    "Pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12.0",
    "black>=21.0",
    "flake8>=3.9.0",
    "isort>=5.9.0",
]
ml = [
    "xgboost>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/example/ransomware-crypto-ai"
Documentation = "https://github.com/example/ransomware-crypto-ai#readme"
Repository = "https://github.com/example/ransomware-crypto-ai.git"
Issues = "https://github.com/example/ransomware-crypto-ai/issues"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
